# competitive-programmers-handbook

./: .gitignore  LICENSE  README.md  c02_4_maximum_subarray_sum.py  c03_1_sorting_theory.py  c05_1_generating_subsets.py  c05_2_generating_permutations.py  c05_3_backtracking.py  c05_4_pruning_the_search.py  c06_1_coin_problem.py  c06_2_scheduling.py  c06_3_tasks_and_deadlines.py  c06_4_minimizing_sums.py  c06_5_data_compression.py  c07_1_coin_problem.py  c07_2_longest_increasing_subseqence.py  c07_3_paths_in_a_grid.py  c07_5_edit_distance.py  c08_1_two_pointers_method.py  c08_3_sliding_window_minimum.py  c09_1_static_array_queries.py  c09_2_binary_indexed_tree.py  c09_3_segment_tree.py  c09_4_additional_techniques.py  c10_5_dynamic_programming.py  c12_1_depth_first_search.py  c12_3_applications.py  c13_1_bellman_ford.py  c13_2_dijkstras_algorithm.py  c13_3_floyd_warshall_algorithm.py  c14_1_graph_traversal.py  c14_2_diameter.py  c14_3_all_longest_paths.py  c14_4_binary_trees.py  c15_2_union_find_structure.py  c16_1_topological_sorting.py  c16_2_dynamic_programming.py  c16_3_successor_paths.py  c16_4_cycle_detection.py  c17_1_kosarajus_algorithm.py  (+38 more)
c++/: CMakeLists.txt  c02_4_maximum_subarray_sum.cpp  c03_1_sorting_theory.cpp  c03_3_binary_search.cpp  c05_1_generating_subsets.cpp  c05_2_generating_permutations.cpp  c05_3_backtracking.cpp  c05_4_pruning_the_search.cpp  c05_5_meet_in_the_middle.cpp  c06_1_coin_problem.cpp  c06_2_scheduling.cpp  c06_3_tasks_and_deadlines.cpp  c06_4_minimizing_sums.cpp  c06_5_data_compression.cpp  c07_1_coin_problem.cpp  c07_2_longest_increasing_subseqence.cpp  c07_3_paths_in_a_grid.cpp  c07_4_knapsack_problems.cpp  c07_5_edit_distance.cpp  c07_6_counting_tilings.cpp  c08_1_two_pointers_method.cpp  c08_2_nearest_smaller_elements.cpp  c08_3_sliding_window_minimum.cpp  c09_1_static_array_queries.cpp  c09_1_static_array_queries.h  c09_2_binary_indexed_tree.cpp  c09_2_binary_indexed_tree.h  c09_3_segment_tree.cpp  c09_4_additional_techniques.cpp  c09_4_additional_techniques.h  c10_2_bit_operations.cpp  c10_4_bit_optimizations.cpp  c10_5_dynamic_programming.cpp  c12_1_depth_first_search.cpp  c12_2_breadth_first_search.cpp  c12_3_applications.cpp  c12_3_applications.h  c13_1_bellman_ford.cpp  c13_2_dijkstras_algorithm.cpp  c13_3_floyd_warshall_algorithm.cpp  (+75 more)
python/: c02_4_maximum_subarray_sum.py  c03_1_sorting_theory.py  c03_3_binary_search.py  c05_2_generating_permutations.py  c05_3_backtracking.py  c05_5_meet_in_the_middle.py  c06_1_coin_problem.py  c06_2_scheduling.py  c06_3_tasks_and_deadlines.py  c06_4_minimizing_sums.py  c07_1_coin_problem.py  c07_4_knapsack_problems.py  c07_5_edit_distance.py  c07_6_counting_tilings.py  c08_1_two_pointers_method.py  c08_2_nearest_smaller_elements.py  c09_2_binary_indexed_tree.py  c09_3_segment_tree.py  c10_2_bit_operations.py  c10_3_representing_sets.py  c10_4_bit_optimizations.py  c12_1_depth_first_search.py  c12_2_breadth_first_search.py  c12_3_applications.py  c13_1_bellman_ford.py  c13_2_dijkstras_algorithm.py  c13_3_floyd_warshall_algorithm.py  c14_1_graph_traversal.py  c14_2_diameter.py  c14_3_all_longest_paths.py  c14_4_binary_trees.py  c15_1_kruskals_algorithm.py  c15_2_union_find_structure.py  c15_3_prims_algorithm.py  c16_1_topological_sorting.py  c16_2_dynamic_programming.py  c16_3_successor_paths.py  c16_4_cycle_detection.py  c17_1_kosarajus_algorithm.py  c17_2_2sat_problem.py  (+38 more)
